--- a/index.html
+++ b/index.html
@@ -28,5 +28,22 @@
         </nav>
       </div>
     </header>
+    <!-- end Header -->
+    <!-- main -->
+    <main id="main">
+      <div class="container">
+        <h4>Welcome</h4>
+        <h2>I'm A <span>Front-End Developer</span></h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae,
+          soluta?
+        </p>
+        <button class="download">DOWNLOAD CV</button>
+        <button class="mouse">
+          <i class="fa-solid fa-computer-mouse"></i>
+        </button>
+      </div>
+    </main>
+    <!-- end main -->
   </body>
 </html>
