--- a/index.html
+++ b/index.html
@@ -45,5 +45,81 @@
       </div>
     </main>
     <!-- end main -->
+    <!-- section #about -->
+    <section id="about" class="about">
+      <div class="container">
+        <div class="title">
+          <h4>Who Am I</h4>
+          <h2>About Me</h2>
+        </div>
+        <div class="about-self">
+          <div class="left"><img src="./images/me_alone.jpg" alt="" /></div>
+          <div class="right">
+            <h3>Hello, <strong>I'm Lzynee</strong></h3>
+            <p>I'm a Web Publisher And Web Front-End Developer.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
+              dolorum?
+            </p>
+            <p>
+              Enim perferendis illo delectus! Facilis distinctio exercitationem
+              unde tempore corrupti!
+            </p>
+            <p>
+              Molestiae dolores veritatis magni assumenda debitis explicabo
+              officia iste necessitatibus!
+            </p>
+            <div class="social">
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-twitch"></i></a>
+              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end section #about -->
+    <!-- section #features -->
+    <section id="features" class="do">
+      <div class="container">
+        <div class="title">
+          <h4>Features</h4>
+          <h2>What I Do</h2>
+        </div>
+        <div class="do-me">
+          <div class="do-inner">
+            <div class="icon"><i class="fa-brands fa-html5"></i></div>
+            <div class="content">
+              <h3>HTML5</h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
+                iste, ratione sit reprehenderit tempora veritatis quae quam odit
+                impedit expedita.
+              </p>
+            </div>
+          </div>
+          <div class="do-inner">
+            <div class="icon"><i class="fa-brands fa-css3-alt"></i></div>
+            <div class="content">
+              <h3>CSS3</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quae at temporibus enim officiis itaque ea minus, praesentium quis consequuntur?
+              </p>
+            </div>
+          </div>
+          <div class="do-inner">
+            <div class="icon"><i class="fa-brands fa-bootstrap"></i></div>
+            <div class="content">
+              <h3>BootStrap v5.0</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam neque hic dignissimos repellendus earum vero libero beatae officiis cupiditate illum.
+              </p>
+            </div>
+          </div>
+        </div>        
+      </div>
+    </section>
+    <!-- end section #features -->
   </body>
 </html>
