--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="container">
         <!-- 페이지 좌측 상단 모서리의 페이지 로고 및 네비게이터 => 위치 상단으로 고정 -->
-        <h1><button>SU</button></h1>
+        <h1><button>ZY</button></h1>
         <nav>
           <ul>
             <li><button>About</button></li>
@@ -49,14 +49,16 @@
     </main>
     <!-- end of main -->
     <!-- section #about -->
-    <!-- 좌측에 사진, 우측에 간단한 소개말 -->
+    <!-- 자기소개 페이지 -->
+    <!-- 섹션 > 컨테이너 > 내용(타이틀, 본문) 구조-->
     <section id="about" class="about">
       <div class="container">
         <div class="title">
           <h4>Who Am I</h4>
-          <h2>About Me</h2>
+          <h2>ABOUT ME</h2>
         </div>
         <div class="about-self">
+          <!-- 좌측에 사진, 우측에 간단한 소개말 -->
           <div class="left"><img src="./images/me_alone.jpg" alt="" /></div>
           <div class="right">
             <h3>Hello, <strong>I'm Lzynee</strong></h3>
@@ -73,6 +75,7 @@
               Molestiae dolores veritatis magni assumenda debitis explicabo
               officia iste necessitatibus!
             </p>
+            <!-- SNS 계정으로 리디렉트하는 외부 링크 -->
             <div class="social">
               <a href="#"><i class="fa-brands fa-facebook"></i></a>
               <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -85,6 +88,7 @@
     </section>
     <!-- end of section #about -->
     <!-- section #features -->
+    <!-- 개인 역량을 간단히 정리 -->
     <section id="features" class="do">
       <div class="container">
         <div class="title">
@@ -92,6 +96,8 @@
           <h2>What I Do</h2>
         </div>
         <div class="do-me">
+          <!-- 컨테이너 내부 본문 구조: 도구별 카드 > 아이콘, 내용(타이틀, 설명) -->
+          <!-- do-inner 1 -->
           <div class="do-inner">
             <div class="icon"><i class="fa-brands fa-html5"></i></div>
             <div class="content">
@@ -103,6 +109,7 @@
               </p>
             </div>
           </div>
+          <!-- do-inner 2 -->
           <div class="do-inner">
             <div class="icon"><i class="fa-brands fa-css3-alt"></i></div>
             <div class="content">
@@ -114,6 +121,7 @@
               </p>
             </div>
           </div>
+          <!-- do-inner 3 -->
           <div class="do-inner">
             <div class="icon"><i class="fa-brands fa-bootstrap"></i></div>
             <div class="content">
@@ -129,6 +137,7 @@
       </div>
     </section>
     <!-- end of section #features -->
+    <!-- 배경 이미지 (고정 위치) => 다음 섹션으로 이동할 때 스크롤하는 동안 확인 가능 -->
     <div class="bg"></div>
     <!-- section #portfolio -->
     <section id="portfolio" class="portfolio">
@@ -138,6 +147,7 @@
           <h2>PortFolio</h2>
         </div>
         <div class="portfolio-me">
+          <!-- 총 6개 항목을 이미지, 타이틀과 함께 카드 형식으로 구성 -->
           <div class="portfolio-inner">
             <img src="./images/mock1.png" alt="샘플이미지" />
             <strong>BRANDING</strong>
@@ -234,7 +244,7 @@
                 <textarea id="msg"></textarea>
               </div>
               <!-- 폼의 마지막 (최하단) - 제출 버튼 -->
-              <button type="submit">send</button>              
+              <button type="submit">send</button>
             </form>
           </div>
         </div>
