--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
           <ul>
             <li><button>About</button></li>
-            <li><button>Features</button></li>
+            <li><button>Objectives</button></li>
             <li><button>Portfolio</button></li>
             <li><button>Contact</button></li>
           </ul>
@@ -35,10 +35,10 @@
     <main id="main">
       <div class="container">
         <h4>Welcome</h4>
-        <h2>I'm A <span>Front-End Developer</span></h2>
+        <h2>I'm A <span>Steady Learner</span></h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae,
-          soluta?
+          ready to become a full-stack developer;<br>
+          a nice web publisher and front-end developer.
         </p>
         <button class="download">DOWNLOAD CV</button>
         <!-- 마우스 아이콘 모양의 버튼 => 위아래로 바운스하는 애니메이션 적용 -->
@@ -54,89 +54,88 @@
     <section id="about" class="about">
       <div class="container">
         <div class="title">
-          <h4>Who Am I</h4>
-          <h2>ABOUT ME</h2>
+          <h4>ABOUT ME</h4>
+          <h2>Who I Am</h2>
         </div>
         <div class="about-self">
           <!-- 좌측에 사진, 우측에 간단한 소개말 -->
-          <div class="left"><img src="./images/me_alone.jpg" alt="" /></div>
+          <div class="left"><img src="./images/me_alonem.jpg" alt="" /></div>
           <div class="right">
             <h3>Hello, <strong>I'm Lzynee</strong></h3>
-            <p>I'm a Web Publisher And Web Front-End Developer.</p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-              dolorum?
+              At the time, I'm participating in the web developer training course hosted by Chunjae Education INC. 
             </p>
             <p>
-              Enim perferendis illo delectus! Facilis distinctio exercitationem
-              unde tempore corrupti!
+              In the course I'm mainly studying for web development based on Java, but I'm also interested in building applications using Dart; this will be my next step to take.
             </p>
             <p>
-              Molestiae dolores veritatis magni assumenda debitis explicabo
-              officia iste necessitatibus!
+              I always look for something new to learn, and once I give it a try, I work on it steadily and make it a footstone for the next thing to come.
             </p>
             <!-- SNS 계정으로 리디렉트하는 외부 링크 -->
             <div class="social">
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
-              <a href="#"><i class="fa-brands fa-twitch"></i></a>
-              <a href="#"><i class="fa-brands fa-youtube"></i></a>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-discord"></i></a>
+              <a href="#"><i class="fa-brands fa-slack"></i></a>
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- end of section #about -->
-    <!-- section #features -->
+    <!-- section #objectives -->
     <!-- 개인 역량을 간단히 정리 -->
-    <section id="features" class="do">
+    <section id="objectives" class="do">
       <div class="container">
         <div class="title">
-          <h4>Features</h4>
-          <h2>What I Do</h2>
+          <h4>OBJECTIVES</h4>
+          <h2>What I Study For</h2>
         </div>
         <div class="do-me">
           <!-- 컨테이너 내부 본문 구조: 도구별 카드 > 아이콘, 내용(타이틀, 설명) -->
           <!-- do-inner 1 -->
           <div class="do-inner">
-            <div class="icon"><i class="fa-brands fa-html5"></i></div>
+            <div class="icon">
+              <i class="fa-brands fa-java"></i>
+              <i class="fa-brands fa-js"></i>
+            </div>
             <div class="content">
-              <h3>HTML5</h3>
+              <h3>Java & JavaScript</h3>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
-                iste, ratione sit reprehenderit tempora veritatis quae quam odit
-                impedit expedita.
+                ✓ How to develop programs in Java <br>
+                ✓ How to build or develop web sites in JavaScript <br>
+                As I go forth, this web page will also be updated bit by bit. ☺️
               </p>
             </div>
           </div>
           <!-- do-inner 2 -->
           <div class="do-inner">
-            <div class="icon"><i class="fa-brands fa-css3-alt"></i></div>
+            <div class="icon"><i class="fa-brands fa-html5"></i></div>
             <div class="content">
-              <h3>CSS3</h3>
+              <h3>HTML5</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda quae at temporibus enim officiis itaque ea minus,
-                praesentium quis consequuntur?
+                ✓ The basic structure of an HTML file <br>
+                ✓ How to apply various styles - <br>
+                Linking CSS / JS sheets to HTML files
               </p>
             </div>
           </div>
           <!-- do-inner 3 -->
           <div class="do-inner">
-            <div class="icon"><i class="fa-brands fa-bootstrap"></i></div>
+            <div class="icon"><i class="fa-brands fa-css3-alt"></i></div>
             <div class="content">
-              <h3>BootStrap v5.0</h3>
+              <h3>CSS3</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Quisquam neque hic dignissimos repellendus earum vero libero
-                beatae officiis cupiditate illum.
+                ✓ Various attributes I can apply on HTML files<br>
+                ✓ Layouts to publish web pages as intended<br>
+                Yet to build a responsive page; applying responsive designs on web pages is my next goal in CSS skills.
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- end of section #features -->
+    <!-- end of section #objectives -->
     <!-- 배경 이미지 (고정 위치) => 다음 섹션으로 이동할 때 스크롤하는 동안 확인 가능 -->
     <div class="bg"></div>
     <!-- section #portfolio -->
@@ -201,7 +200,7 @@
               </div>
               <div class="info-text">
                 <h3>phone</h3>
-                <p>010-2222-1111</p>
+                <p>010-0000-0000</p>
               </div>
             </div>
             <!-- 카드 2: 이메일 주소 -->
@@ -251,5 +250,7 @@
       </div>
     </section>
     <!-- end of section #contact -->
+    <!-- 자바스크립트 연결 명령어를 넣을 부분 -->
+    <script src="script.js"></script>
   </body>
 </html>
